<resources>
    <string name="app_name">MovieDB-Kotlin</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="title_now_playing">Now Playing</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_placeholder">Placeholder</string>
    <string name="title_trending">Trending Movies of The Week</string>
    <string name="title_popular">Popular Movies</string>
    <string name="title_top_rated">Top Rated Movies</string>
    <string name="text_null">-</string>
    <string name="text_movie_title">Title</string>
    <string name="text_production_company">Production Company</string>
    <string name="text_synopsis">Synopsis</string>
    <string name="text_watch_trailer">Watch Trailer</string>
    <string name="text_movie_caption">%1$s \u2022 %2$sh %3$sm</string>
    <string name="text_movie_rating">%1$s (%2$s)</string>
    <string name="text_movie_description">%1$s\n\n%2$s</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="text_video_failed">Trailer is not available</string>
    <string name="text_dismiss">Dismiss</string>
    <string name="title_recommendation">Recommended Movies</string>
</resources>