<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_trending_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/title_trending"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_trending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="@+id/text_trending_title"
                app:layout_constraintStart_toStartOf="@+id/text_trending_title"
                app:layout_constraintTop_toBottomOf="@+id/text_trending_title">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/view_pager_trending"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_popular_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title_popular"
                app:layout_constraintEnd_toEndOf="@+id/text_trending_title"
                app:layout_constraintStart_toStartOf="@+id/text_trending_title"
                app:layout_constraintTop_toBottomOf="@+id/card_trending" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_popular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_popular_title">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/text_top_rated_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title_top_rated"
                app:layout_constraintEnd_toEndOf="@+id/text_popular_title"
                app:layout_constraintStart_toStartOf="@+id/text_popular_title"
                app:layout_constraintTop_toBottomOf="@+id/recycler_view_popular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_top_rated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/recycler_view_popular"
                app:layout_constraintStart_toStartOf="@+id/recycler_view_popular"
                app:layout_constraintTop_toBottomOf="@+id/text_top_rated_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>