<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/image_movie_backdrop_detail"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_movie_poster_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-100dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_movie_backdrop_detail">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/image_movie_poster_detail"
                        android:layout_width="200dp"
                        android:layout_height="300dp"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@tools:sample/backgrounds/scenic" />

                    <TextView
                        android:id="@+id/text_movie_poster_title_detail"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                        app:layout_constraintBottom_toBottomOf="@+id/image_movie_poster_detail"
                        app:layout_constraintEnd_toEndOf="@+id/image_movie_poster_detail"
                        app:layout_constraintStart_toStartOf="@+id/image_movie_poster_detail"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/text_movie_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/text_movie_caption_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:layout_constraintEnd_toEndOf="@+id/card_movie_poster_detail"
                app:layout_constraintStart_toStartOf="@+id/card_movie_poster_detail"
                app:layout_constraintTop_toBottomOf="@+id/card_movie_poster_detail"
                tools:text="@string/text_null" />

            <Button
                android:id="@+id/button_movie_watch_trailer_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_watch_trailer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_movie_caption_detail" />

            <TextView
                android:id="@+id/text_movie_title_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="@+id/button_movie_watch_trailer_detail"
                app:layout_constraintStart_toStartOf="@+id/button_movie_watch_trailer_detail"
                app:layout_constraintTop_toBottomOf="@+id/button_movie_watch_trailer_detail"
                tools:text="@string/text_movie_title" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_baseline_star_rate_24"
                app:layout_constraintStart_toStartOf="@+id/text_movie_title_detail"
                app:layout_constraintTop_toBottomOf="@+id/text_movie_title_detail" />

            <TextView
                android:id="@+id/text_movie_rating_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                tools:text="@string/text_null" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="@+id/text_movie_rating_detail"
                app:layout_constraintStart_toEndOf="@+id/text_movie_rating_detail"
                app:layout_constraintTop_toTopOf="@+id/text_movie_rating_detail" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_arrow_drop_up_24"
                app:layout_constraintBottom_toBottomOf="@+id/divider"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toTopOf="@+id/divider" />

            <TextView
                android:id="@+id/text_movie_popularity_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4"
                tools:text="@string/text_null" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_movie_genre_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"
                android:scrollbarAlwaysDrawVerticalTrack="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_production_company"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="@+id/text_movie_title_detail"
                app:layout_constraintStart_toStartOf="@+id/text_movie_title_detail"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_movie_genre_detail" />

            <TextView
                android:id="@+id/text_movie_production_companies_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                tools:text="@string/text_null" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/text_synopsis"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="@id/textView6"
                app:layout_constraintStart_toStartOf="@id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/text_movie_production_companies_detail" />

            <TextView
                android:id="@+id/text_movie_description_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:text="@string/text_null" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/title_recommendation"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="@id/textView7"
                app:layout_constraintStart_toStartOf="@id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/text_movie_description_detail" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_movie_recommendation_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/recycler_view_movie_genre_detail"
                app:layout_constraintStart_toStartOf="@+id/recycler_view_movie_genre_detail"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>